--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,21 @@ a {
   font-family: "burtons";
   src: url('../public/Burtons.otf');
 }
+
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+  :target:before {
+    content: "";
+    display: block;
+    height: 100px;
+    margin: -100px 0 0;
+  }
+}
+a.home {
+  display: block;
+  position: relative;
+  top: -250px;
+  visibility: hidden;
+}
